--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,22 @@ text-transform: uppercase;
 .text-blue{
   color:var(--mainblue)
 }
+.btn-black{
+background: transparent;
+text-transform: capitalize;
+font-size: 0.8rem !important;
+color:var(--mainDark);
+border-radius:0!important;
+border:0.1rem solid var(--mainDark)!important;
+
+
+}
+.btn-black:hover{
+  background: var(--mainDark)!important;
+  color:var(--mainWhite)!important;
+}
+.cart-icon{
+  cursor:pointer;
+  font-size: 1.2rem;
+  color:var(--mainYellow)
+}
